# ImplicitSurfaces

./: README.md
ImplicitSurfaces/01_OGLBase/: 01_OGLBase.vcxproj  01_OGLBase.vcxproj.filters  Function.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  MyApp.cpp  MyApp.h  main.cpp  myFrag.frag  myVert.vert
ImplicitSurfaces/01_OGLBase/Dependencies/TriMesh/: trimesh.cpp  trimesh.h
ImplicitSurfaces/01_OGLBase/Dependencies/implicit_marching_cubes-master/: .gitignore  .gitmodules  CMakeLists.txt  README.md  mc.cc  mc.h  tables.cc  test.cc
ImplicitSurfaces/01_OGLBase/Dependencies/implicit_marching_cubes-master/libgeom/: geom.vcxproj
ImplicitSurfaces/01_OGLBase/Includes/: BufferObject.h  BufferObject.inl  GLconversions.hpp  ProgramObject.h  ProgramObject.inl  ShaderObject.h  TextureObject.h  TextureObject.inl  VertexArrayObject.h
ImplicitSurfaces/01_OGLBase/x64/Debug/: 01_OGLBase.exe.recipe  vc142.idb
ImplicitSurfaces/01_OGLBase/x64/Debug/01_OGLBase.tlog/: 01_OGLBase.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplicitSurfaces/01_OGLBase/x64/Release/01_OGLBase.tlog/: 01_OGLBase.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
ImplicitSurfaces/x64/Debug/: myFrag.frag
